Rewrite 90% of the github talk.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -61,20 +61,20 @@
             <p class="fragment">Who works with github on a regular base?</p>
         </section>
 
-
         <section>
-            <h2>github for the impatient</h2>
-            <p class="fragment">Code hosting <a target="_blank" href="https://github.com/torvalds/linux">platform</a>
-            </p><!-- Github search -> Linux -->
-            <p class="fragment">Enabling team-based <a target="_blank"
-                                                       href="https://github.com/rails/rails">development</a></p>
-            <!-- Github search -> RubyOnRails -->
-            <p class="fragment">For open and <a target="_blank" href="https://github.com/Microsoft">closed source
-                software</a></p>
+            <h2>You might stumble across github profiles on a lot of occasions</h2>
+            <p class="fragment">Linked in a candidates CV</p>
+            <p class="fragment">Your contact in the dev team might say something "he looks really good on github!"</p>
+            <p class="fragment">Friend-of-a-friend referrals from developer probably have some reference to github</p>
         </section>
 
         <section>
-            <h2>open source software</h2>
+            <h2>Ok, so what's github?</h2>
+        </section>
+
+        <section>
+            <h2>github is a code hosting platform</h2>
+            <p class="fragment">Mostly known for open source software</p>
             <p class="fragment"><i>Open source</i> refers to something that can be modified and shared because its
                 design is publicly accessible</p>
             <p class="fragment"><i>Open source software</i> is available for modification or enhancement by anyone</p>
@@ -86,82 +86,83 @@
         </section>
 
         <section>
-            <h2>closed source software</h2>
-            <p class="fragment">With <i>closed source software</i>, the source code is not shared with the public for
-                anyone to look at or make changes to.</p>
-            <p class="fragment"><i>Closed source</i> is the opposite of <i>open source</i>.</p>
-            <ul class="fragment">
-                <li>Operating systems (MacOS, Windows)</li>
-                <li>Programming languages (Apex)</li>
-                <li>User applications (Internet Explorer, MS Office)</li>
-            </ul>
+            <section>
+                <h2>github explained - repositories and users</h2>
+                <p class="fragment">Software resides in so called <a target="_blank" href="https://github.com/torvalds/linux">repositories</a></p>
+                <p class="fragment">Which belongs to one <a target="_blank" href="https://github.com/torvalds">user</a> or <a target="_blank" href="https://github.com/zalando">organization</a></p>
+                <p class="fragment">And can have an indefinite numbers of contributors and collaborateurs</a></p>
+            </section>
+            <section>
+                <img data-src="img/reveal_js_repository.png">
+            </section>
+            <section>
+                <img data-src="img/linux_repository.png">
+            </section>
+            <section>
+                <img data-src="img/linus_torvalds.png">
+            </section>
+            <section>
+                <img data-src="img/zalando_organization.png">
+            </section>
         </section>
 
         <section>
-            <h2>github's main weapons</h2>
-            <p class="fragment"><a target="_blank" href="https://github.com/rails/rails">Repositories</a></p>
-            <p class="fragment"><a target="_blank" href="https://github.com/rails/rails/issues">Issues</a></p>
-            <p class="fragment"><a target="_blank" href="https://github.com/rails/rails/pulls">Pull requests</a></p>
+            <section>
+                <h2>github explained - discussing code</h2>
+                <p class="fragment">Users can contribute via <em>issues</em></p>
+                <p class="fragment">Think of <em>issues</em> as <em>discussion items</em> for</p>
+                <ul class="fragment">
+                    <li>bugs</li>
+                    <li>feedback</li>
+                    <li>suggestions</li>
+                </ul>
+            </section>
+            <section>
+                <img data-src="img/bug_report_via_issue_in_reveal_js.png">
+            </section>
+            <section>
+                <img data-src="img/feature_request_via_issue_in_reveal_js.png">
+            </section>
         </section>
 
         <section>
-            <h2>Ok, so how do I use github?</h2>
-            <p class="fragment">To understand how to use github you must understand what developers actually want</p>
+            <section>
+                <h2>github explained - changing code</h2>
+                <p class="fragment">Users can suggest changes via <em>pull requests</em></p>
+                <p class="fragment">Think of <em>pull requests</em> as <em>change request</em> for</p>
+                <ul class="fragment">
+                    <li>fixing bugs</li>
+                    <li>adding new features</li>
+                    <li>changing features</li>
+                </ul>
+            </section>
+            <section>
+                <h2>TODO</h2>
+            </section>
         </section>
 
         <section>
-            <h2>Developers want to work on interesting problems</h2>
-            <p class="fragment">Search for your area of interest - from <a target="_blank"
-                                                                           href="https://github.com/search?utf8=%E2%9C%93&q=machine+learning">machine
-                learning</a> to <a target="_blank"
-                                   href="https://github.com/search?utf8=%E2%9C%93&q=control+coffee+machine&type=Repositories&ref=searchresults">controlling
-                coffee machines</a></p>
-            <p class="fragment">Scout <a target="_blank" href="https://github.com/tensorflow/tensorflow">interesting
-                looking projects</a></p>
-            <p class="fragment">Get to know them (download, read code, play around, check out <a target="_blank"
-                                                                                                 href="https://github.com/tensorflow/tensorflow">its
-                issues</a>)</p>
-            <p class="fragment"><a target="_blank" href="https://github.com/tensorflow/tensorflow/pulls">Contribute!</a>
-            </p>
+            <h2>developers love github because...</h2>
+            <p class="fragment">It allows them to work on <a target="_blank" href="https://github.com/tensorflow/tensorflow">interesting problems</a> as a team</p>
+            <img class="fragment" data-src="img/tensor_flow_repository.png">
         </section>
 
         <section>
-            <h2>Developers seek recognition from their peers</h2>
-            <p class="fragment"><i>Stars</i> allow other developers to express a kind of <a target="_blank"
-                                                                                            href="https://github.com/rails/rails">"like"</a>
-            </p>
-            <p class="fragment">Others can express gratitude in <a target="_blank"
-                                                                   href="https://github.com/bbatsov/rubocop/issues/2551">issues</a>
-            </p>
-            <p class="fragment">Or in <a target="_blank" href="https://github.com/rails/rails/pulls">pull requests</a>
-            </p>
+            <h2>developers love github because...</h2>
+            <p class="fragment">It makes it easy to learn <a target="_blank" href="https://github.com/apple/swift">new languages</a> and technologies</p>
+            <img class="fragment" data-src="img/swift_repository.png">
         </section>
 
         <section>
-            <h2>Developers want to create something popular</h2>
-            <p class="fragment">Github gives you a feeling for popularity via ...</p>
-            <p class="fragment"><a target="_blank" href="https://github.com/rails/rails">Stars</a></p>
-            <p class="fragment">Issue & pull request <a target="_blank" href="https://github.com/rails/rails/issues">count</a>
-            </p>
-            <p class="fragment">The <a target="_blank" href="https://github.com/rails/rails/pulse">pulse</a></p>
+            <h2>developers love github because...</h2>
+            <p class="fragment">They get recognition from their peers (e.g. via <a target="_blank" href="https://github.com/hakimel/reveal.js">github stars</a>)</p>
+            <img class="fragment" data-src="img/reveal_js_star_count.png">
         </section>
 
         <section>
-            <h2>Developers have the urge to learn</h2>
-            <p class="fragment"><a target="_blank" href="https://github.com/explore">Explore github</a></p>
-            <p class="fragment">Subscribe to <a target="_blank" href="https://github.com/bbatsov/rubocop/issues/2557">pull
-                requests / issues</a></p>
-            <p class="fragment">Read <a target="_blank" href="https://github.com/bbatsov/rubocop/pull/2528/files">pull
-                requests / issues</a></p>
-        </section>
-
-        <section>
-            <h2>Developers love to talk about technology</h2>
-            <p class="fragment">...or just <a target="_blank" href="https://github.com/NARKOZ/hacker-scripts/issues/3">chit
-                chat about coffee machines</a></p>
-            <p class="fragment">...or talk about literally anything e.g. <a target="_blank"
-                                                                            href="https://github.com/bundestag/gesetze">legislation</a>
-            </p>
+            <h2>developers love github because...</h2>
+            <p class="fragment">They love to <a target="_blank" href="https://github.com/NARKOZ/hacker-scripts/issues/3">chit chat about technology</a></p>
+            <img class="fragment" data-src="img/hacker_scripts_coffee_machine_discussion.png">
         </section>
 
         <section>
@@ -173,22 +174,21 @@
         </section>
 
         <section>
-            <h2>Measure his activity</h2>
-            <p class="fragment">On his <a target="_blank" href="https://github.com/tenderlove">own projects</a></p>
-            <p class="fragment">But also on <a target="_blank" href="https://github.com/ruby/ruby">other people's
-                projects</a></p>
-            <p class="fragment">You can directly append ?author=
-                <theusername> or ?author=
-                    <emailaddress> to <a target="_blank"
-                                         href="https://github.com/ruby/ruby/commits/trunk?author=tenderlove">the url</a>
-                        to check out his contributions
-            </p>
-            <p class="fragment">In theory activity does not relate to quality at all but experience shows that in
-                practice it often does</p>
+            <section>
+                <h2>Measure his activity</h2>
+                <p class="fragment">On his <a target="_blank" href="https://github.com/tenderlove">own projects</a></p>
+                <p class="fragment">But also on <a target="_blank" href="https://github.com/ruby/ruby">other people's
+                    projects</a></p>
+                <p class="fragment">In theory activity does not relate to quality at all but experience shows that in
+                    practice it often does</p>
+            </section>
+            <section>
+                <img data-src="img/profile_tenderlove.png">
+            </section>
         </section>
 
         <section>
-            <h2>Get to know his interests</h2>
+            <h2>TODO - Get to know his interests </h2>
             <p class="fragment">Public activity tells you a lot already</p>
             <p class="fragment">Projects he stars</p>
             <p class="fragment">His own pet projects</p>
@@ -196,17 +196,29 @@
 
         <section>
             <h2>Check his social skills / cultural fit</h2>
-            <p class="fragment">Corporate vs startup</p>
-            <p class="fragment">Style of communication</p>
+            <img data-src="img/profile_tenderlove_public_activity.png">
         </section>
 
         <section>
-            <h2>A classical github workflow (ok, it's my workflow)</h2>
-            <p class="fragment">Check out his <a target="_blank" href="https://github.com/tenderlove">profile</a></p>
-            <p class="fragment">Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public
-                activity</a></p>
-            <p class="fragment">Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a>
-            </p>
+            <h2>A github workflow</h2>
+            <p class="fragment">There is no rule book for this</p>
+            <p class="fragment">Everybody, including me, has their own workflow</p>
+        </section>
+
+        <section>
+            <h2>Check out his <a target="_blank" href="https://github.com/tenderlove">profile</a></h2>
+            <img data-src="img/profile_tenderlove.png">
+        </section>
+
+        <section>
+            <h2>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public
+                activity</a></h2>
+            <img data-src="img/profile_tenderlove_public_activity.png">
+        </section>
+
+        <section>
+            <h2>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></h2>
+            <img data-src="img/profile_tenderlove_repositories.png">
         </section>
 
         <section>
