Move vertical slides up one level.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -39,11 +39,11 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
         <section>
-            <h1>How to use github to evaluate developers</h1>
+            <h2>How to use github to evaluate developers</h2>
         </section>
 
         <section>
-            <h2>Who am I?</h2>
+            <h3>Who am I?</h3>
             <ul>
                 <li>Timo Rößner</li>
                 <li>Berlin, Germany</li>
@@ -56,27 +56,27 @@
         </section>
 
         <section>
-            <h2>So...github?</h2>
+            <h3>So...github?</h3>
             <p class="fragment">Who knows github?</p>
             <p class="fragment">Who works with github on a regular base?</p>
         </section>
 
         <section>
-            <h2>You might stumble across github profiles on a lot of occasions</h2>
+            <h3>How to come across github profiles?</h3>
+            <p class="fragment">You might stumble across github profiles on a lot of occasions</p>
             <p class="fragment">Linked in a candidates CV</p>
-            <p class="fragment">Your contact in the dev team might say something "he looks really good on github!"</p>
-            <p class="fragment">Friend-of-a-friend referrals from developer probably have some reference to github</p>
+            <p class="fragment">Your CTO says "he looks really good on github!"</p>
+            <p class="fragment">Friend-of-a-friend referrals</p>
         </section>
 
         <section>
-            <h2>Ok, so what's github?</h2>
+            <h3>Ok, so what's github?</h3>
         </section>
 
         <section>
-            <h2>github is a code hosting platform</h2>
+            <h3>github is a code hosting platform</h3>
             <p class="fragment">Mostly known for open source software</p>
-            <p class="fragment"><i>Open source</i> refers to something that can be modified and shared because its
-                design is publicly accessible</p>
+            <p class="fragment"><i>Open source</i> refers to something that can be modified and shared publicly</p>
             <p class="fragment"><i>Open source software</i> is available for modification or enhancement by anyone</p>
             <ul class="fragment">
                 <li>Operating systems (Android, Linux)</li>
@@ -86,87 +86,75 @@
         </section>
 
         <section>
-            <section>
-                <h2>github explained - repositories and users</h2>
-                <p class="fragment">Software resides in so called <a target="_blank" href="https://github.com/torvalds/linux">repositories</a></p>
-                <p class="fragment">Which belongs to one <a target="_blank" href="https://github.com/torvalds">user</a> or <a target="_blank" href="https://github.com/zalando">organization</a></p>
-                <p class="fragment">And can have an indefinite numbers of contributors and collaborateurs</a></p>
-            </section>
-            <section>
-                <img data-src="img/reveal_js_repository.png">
-            </section>
-            <section>
-                <img data-src="img/linux_repository.png">
-            </section>
-            <section>
-                <img data-src="img/linus_torvalds.png">
-            </section>
-            <section>
-                <img data-src="img/zalando_organization.png">
-            </section>
+            <h3>software resides in repositories</h3>
+            <img data-src="img/linux_repository.png">
         </section>
 
         <section>
-            <section>
-                <h2>github explained - discussing code</h2>
-                <p class="fragment">Users can contribute via <em>issues</em></p>
-                <p class="fragment">Think of <em>issues</em> as <em>discussion items</em> for</p>
-                <ul class="fragment">
-                    <li>bugs</li>
-                    <li>feedback</li>
-                    <li>suggestions</li>
-                </ul>
-            </section>
-            <section>
-                <img data-src="img/bug_report_via_issue_in_reveal_js.png">
-            </section>
-            <section>
-                <img data-src="img/feature_request_via_issue_in_reveal_js.png">
-            </section>
+            <h3>repositories belong to users</h3>
+            <img data-src="img/linus_torvalds.png">
         </section>
 
         <section>
-            <section>
-                <h2>github explained - changing code</h2>
-                <p class="fragment">Users can suggest changes via <em>pull requests</em></p>
-                <p class="fragment">Think of <em>pull requests</em> as <em>change request</em> for</p>
-                <ul class="fragment">
-                    <li>fixing bugs</li>
-                    <li>adding new features</li>
-                    <li>changing features</li>
-                </ul>
-            </section>
-            <section>
-                <h2>TODO</h2>
-            </section>
+            <h3>Discuss via issues</h3>
+            <p class="fragment">Users can contribute via <em>issues</em></p>
+            <p class="fragment">Think of <em>issues</em> as <em>discussion items</em> for</p>
+            <ul class="fragment">
+                <li>bugs</li>
+                <li>feedback</li>
+                <li>suggestions</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Report bugs</h3>
+            <img data-src="img/bug_report_via_issue_in_reveal_js.png">
+        </section>
+        <section>
+            <h3>Request a feature</h3>
+            <img data-src="img/feature_request_via_issue_in_reveal_js.png">
         </section>
 
         <section>
-            <h2>developers love github because...</h2>
-            <p class="fragment">It allows them to work on <a target="_blank" href="https://github.com/tensorflow/tensorflow">interesting problems</a> as a team</p>
+            <h3>Update code</h3>
+            <p class="fragment">Users can suggest changes via <em>pull requests</em></p>
+            <p class="fragment">Think of <em>pull requests</em> as <em>change request</em> for</p>
+            <ul class="fragment">
+                <li>fixing bugs</li>
+                <li>adding new features</li>
+                <li>changing features</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Add a feature</h3>
+            <img data-src="img/add_feature_via_pull_request_in_reveal_js.png">
+        </section>
+
+        <section>
+            <h3>developers love github because...</h3>
+        </section>
+
+        <section>
+            <h3>github gives them <a target="_blank" href="https://github.com/tensorflow/tensorflow">interesting problems</a></h3>
             <img class="fragment" data-src="img/tensor_flow_repository.png">
         </section>
 
         <section>
-            <h2>developers love github because...</h2>
-            <p class="fragment">It makes it easy to learn <a target="_blank" href="https://github.com/apple/swift">new languages</a> and technologies</p>
+            <h3>github makes it easy to learn <a target="_blank" href="https://github.com/apple/swift">new languages</a> and technologies</h3>
             <img class="fragment" data-src="img/swift_repository.png">
         </section>
 
         <section>
-            <h2>developers love github because...</h2>
-            <p class="fragment">They get recognition from their peers (e.g. via <a target="_blank" href="https://github.com/hakimel/reveal.js">github stars</a>)</p>
+            <h3>github gives them recognition from their peers (e.g. via stars)</h3>
             <img class="fragment" data-src="img/reveal_js_star_count.png">
         </section>
 
         <section>
-            <h2>developers love github because...</h2>
-            <p class="fragment">They love to <a target="_blank" href="https://github.com/NARKOZ/hacker-scripts/issues/3">chit chat about technology</a></p>
+            <h3>github lets them <a target="_blank" href="https://github.com/NARKOZ/hacker-scripts/issues/3">chit chat about technology</a></h3>
             <img class="fragment" data-src="img/hacker_scripts_coffee_machine_discussion.png">
         </section>
 
         <section>
-            <h2>So how can I find developers using github?</h2>
+            <h3>So how can I find developers using github?</h3>
             <p class="fragment">Well...you can't</p>
             <p class="fragment">github is not a recruiting platform</p>
             <p class="fragment">It doesn't offer any recruiting-related search functionality</p>
@@ -174,55 +162,57 @@
         </section>
 
         <section>
-            <section>
-                <h2>Measure his activity</h2>
-                <p class="fragment">On his <a target="_blank" href="https://github.com/tenderlove">own projects</a></p>
-                <p class="fragment">But also on <a target="_blank" href="https://github.com/ruby/ruby">other people's
-                    projects</a></p>
-                <p class="fragment">In theory activity does not relate to quality at all but experience shows that in
-                    practice it often does</p>
-            </section>
-            <section>
-                <img data-src="img/profile_tenderlove.png">
-            </section>
+            <h3>Measure a candidates activity</h3>
+            <p class="fragment">On his <a target="_blank" href="https://github.com/tenderlove">own projects</a></p>
+            <p class="fragment">But also on <a target="_blank" href="https://github.com/ruby/ruby">other people's
+                projects</a></p>
+            <p class="fragment">In theory activity does not relate to quality at all but experience shows that in
+                practice it often does</p>
+        </section>
+        <section>
+            <h3>A sample profile</h3>
+            <img data-src="img/profile_tenderlove.png">
         </section>
 
         <section>
-            <h2>TODO - Get to know his interests </h2>
-            <p class="fragment">Public activity tells you a lot already</p>
-            <p class="fragment">Projects he stars</p>
-            <p class="fragment">His own pet projects</p>
-        </section>
-
-        <section>
-            <h2>Check his social skills / cultural fit</h2>
+            <h3>Evaluate his social skills and cultural fit via his public activity</h3>
             <img data-src="img/profile_tenderlove_public_activity.png">
         </section>
 
         <section>
-            <h2>A github workflow</h2>
+            <h3>Get to know his interests: Starred projects</h3>
+            <p>TODO Image missing</p>
+        </section>
+
+        <section>
+            <h3>Get to know his interests continued: Own projects</h3>
+            <p>TODO Image missing</p>
+        </section>
+
+        <section>
+            <h3>A github workflow</h3>
             <p class="fragment">There is no rule book for this</p>
             <p class="fragment">Everybody, including me, has their own workflow</p>
         </section>
 
         <section>
-            <h2>Check out his <a target="_blank" href="https://github.com/tenderlove">profile</a></h2>
+            <h3>Check out his <a target="_blank" href="https://github.com/tenderlove">profile</a></h3>
             <img data-src="img/profile_tenderlove.png">
         </section>
 
         <section>
-            <h2>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public
-                activity</a></h2>
+            <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public
+                activity</a></h3>
             <img data-src="img/profile_tenderlove_public_activity.png">
         </section>
 
         <section>
-            <h2>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></h2>
+            <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></h3>
             <img data-src="img/profile_tenderlove_repositories.png">
         </section>
 
         <section>
-            <h2>Recap</h2>
+            <h3>Recap</h3>
             <p class="fragment">Developers love github</p>
             <p class="fragment">github will not help you to find developers</p>
             <p class="fragment">But it can help you to evaluate them</p>
@@ -230,7 +220,7 @@
         </section>
 
         <section>
-            <h2>Thank you!</h2>
+            <h3>Thank you!</h3>
             <p>Questions?</p>
         </section>
     </div>
