Finalize first version.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -63,10 +63,10 @@
 
         <section>
             <h3>How to come across github profiles?</h3>
-            <p class="fragment">You might stumble across github profiles on a lot of occasions</p>
             <p class="fragment">Linked in a candidates CV</p>
             <p class="fragment">Your CTO says "he looks really good on github!"</p>
             <p class="fragment">Friend-of-a-friend referrals</p>
+            <p class="fragment">You google a developer</p>
         </section>
 
         <section>
@@ -86,18 +86,28 @@
         </section>
 
         <section>
-            <h3>software resides in repositories</h3>
-            <img data-src="img/linux_repository.png">
+            <h3>github can also host closed-source software</h3>
+            <img data-src="img/honeypot_organization.png">
         </section>
 
         <section>
-            <h3>repositories belong to users</h3>
+            <h3>github's bread and butter: users</h3>
             <img data-src="img/linus_torvalds.png">
         </section>
 
         <section>
-            <h3>Discuss via issues</h3>
-            <p class="fragment">Users can contribute via <em>issues</em></p>
+            <h3>Users have repositories</h3>
+            <img data-src="img/linux_repository.png">
+        </section>
+
+        <section>
+            <h3>reveal.js hosted @ github</h3>
+            <img data-src="img/reveal_js_repository.png">
+        </section>
+
+        <section>
+            <h3>Repositories have issues</h3>
+            <p class="fragment">Users can discuss and contribute via <em>issues</em></p>
             <p class="fragment">Think of <em>issues</em> as <em>discussion items</em> for</p>
             <ul class="fragment">
                 <li>bugs</li>
@@ -105,10 +115,12 @@
                 <li>suggestions</li>
             </ul>
         </section>
+
         <section>
             <h3>Report bugs</h3>
             <img data-src="img/bug_report_via_issue_in_reveal_js.png">
         </section>
+
         <section>
             <h3>Request a feature</h3>
             <img data-src="img/feature_request_via_issue_in_reveal_js.png">
@@ -117,16 +129,22 @@
         <section>
             <h3>Update code</h3>
             <p class="fragment">Users can suggest changes via <em>pull requests</em></p>
-            <p class="fragment">Think of <em>pull requests</em> as <em>change request</em> for</p>
+            <p class="fragment">Think of <em>pull requests</em> as technical term for <em>change request</em> for</p>
             <ul class="fragment">
                 <li>fixing bugs</li>
                 <li>adding new features</li>
                 <li>changing features</li>
             </ul>
         </section>
+
         <section>
-            <h3>Add a feature</h3>
-            <img data-src="img/add_feature_via_pull_request_in_reveal_js.png">
+            <h3>Add a <a target="_blank" href="https://github.com/hakimel/reveal.js/pull/1074">feature</a></h3>
+            <img data-src="img/add_feature_via_pull_request.png">
+        </section>
+
+        <section>
+            <h3>Add a <a target="_blank" href="https://github.com/hakimel/reveal.js/pull/1074/files">feature (continued)</a></h3>
+            <img data-src="img/pull_request_changes_in_reveal_js.png">
         </section>
 
         <section>
@@ -145,7 +163,7 @@
 
         <section>
             <h3>github gives them recognition from their peers (e.g. via stars)</h3>
-            <img class="fragment" data-src="img/reveal_js_star_count.png">
+            <img data-src="img/reveal_js_repository.png">
         </section>
 
         <section>
@@ -159,6 +177,7 @@
             <p class="fragment">github is not a recruiting platform</p>
             <p class="fragment">It doesn't offer any recruiting-related search functionality</p>
             <p class="fragment">But you can use it to evaluate developers!</p>
+            <p class="fragment">Google somebody's name</p>
         </section>
 
         <section>
@@ -171,22 +190,22 @@
         </section>
         <section>
             <h3>A sample profile</h3>
-            <img data-src="img/profile_tenderlove.png">
+            <img data-src="img/tenderlove_profile.png">
         </section>
 
         <section>
-            <h3>Evaluate his social skills and cultural fit via his public activity</h3>
-            <img data-src="img/profile_tenderlove_public_activity.png">
+            <h3>Check his social skills via his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public activity</a></h3>
+            <img data-src="img/tenderlove_public_activity.png">
         </section>
 
         <section>
-            <h3>Get to know his interests: Starred projects</h3>
-            <p>TODO Image missing</p>
+            <h3>Check out how he responds to issues</h3>
+            <img data-src="img/tenderlove_issue_comment.png">
         </section>
 
         <section>
-            <h3>Get to know his interests continued: Own projects</h3>
-            <p>TODO Image missing</p>
+            <h3>Know his interests: Starred projects</h3>
+            <img data-src="img/tenderlove_starred_projects.png">
         </section>
 
         <section>
@@ -197,18 +216,18 @@
 
         <section>
             <h3>Check out his <a target="_blank" href="https://github.com/tenderlove">profile</a></h3>
-            <img data-src="img/profile_tenderlove.png">
+            <img data-src="img/tenderlove_profile.png">
         </section>
 
         <section>
             <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public
                 activity</a></h3>
-            <img data-src="img/profile_tenderlove_public_activity.png">
+            <img data-src="img/tenderlove_public_activity.png">
         </section>
 
         <section>
             <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></h3>
-            <img data-src="img/profile_tenderlove_repositories.png">
+            <img data-src="img/tenderlove_repositories.png">
         </section>
 
         <section>
@@ -222,6 +241,15 @@
         <section>
             <h3>Thank you!</h3>
             <p>Questions?</p>
+        </section>
+
+        <section>
+            <h3>Optional</h3>
+        </section>
+
+        <section>
+            <h3>If he has popular repositories, how is the documentation?</h3>
+            <img data-src="img/tenderlove_racc_repository.png">
         </section>
     </div>
 
