Circle important parts.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -117,12 +117,12 @@
         </section>
 
         <section>
-            <h3>Report bugs</h3>
-            <img data-src="img/bug_report_via_issue_in_reveal_js.png">
+            <h3>Report <a target="_blank" href="https://github.com/hakimel/reveal.js/issues/1457">bugs</a></h3>
+            <img data-src="img/bug_report_via_issue_in_reveal_js_circled.png">
         </section>
 
         <section>
-            <h3>Request a feature</h3>
+            <h3>Report a <a target="_blank" href="https://github.com/hakimel/reveal.js/issues/1489">feature</a></h3>
             <img data-src="img/feature_request_via_issue_in_reveal_js.png">
         </section>
 
@@ -139,12 +139,12 @@
 
         <section>
             <h3>Add a <a target="_blank" href="https://github.com/hakimel/reveal.js/pull/1074">feature</a></h3>
-            <img data-src="img/add_feature_via_pull_request.png">
+            <img data-src="img/add_feature_via_pull_request_circled.png">
         </section>
 
         <section>
             <h3>Add a <a target="_blank" href="https://github.com/hakimel/reveal.js/pull/1074/files">feature (continued)</a></h3>
-            <img data-src="img/pull_request_changes_in_reveal_js.png">
+            <img data-src="img/pull_request_changes_in_reveal_js_circled.png">
         </section>
 
         <section>
@@ -163,7 +163,7 @@
 
         <section>
             <h3>github gives them recognition from their peers (e.g. via stars)</h3>
-            <img data-src="img/reveal_js_repository.png">
+            <img data-src="img/reveal_js_repository_stars_circled.png">
         </section>
 
         <section>
@@ -188,6 +188,7 @@
             <p class="fragment">In theory activity does not relate to quality at all but experience shows that in
                 practice it often does</p>
         </section>
+
         <section>
             <h3>A sample profile</h3>
             <img data-src="img/tenderlove_profile.png">
@@ -222,12 +223,12 @@
         <section>
             <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public
                 activity</a></h3>
-            <img data-src="img/tenderlove_public_activity.png">
+            <img data-src="img/tenderlove_public_activity_circled.png">
         </section>
 
         <section>
             <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></h3>
-            <img data-src="img/tenderlove_repositories.png">
+            <img data-src="img/tenderlove_repositories_circled.png">
         </section>
 
         <section>
