Add "Beware of forks" and small improvements.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -52,6 +52,7 @@
                         target="_blank" href="https://github.com/whitesmith/rubycritic">RubyCritic</a> core team (hosted
                     @ github)
                 </li>
+                <li>Technical advisor for honeypot</li>
             </ul>
         </section>
 
@@ -63,7 +64,8 @@
 
         <section>
             <h3>How to come across github profiles?</h3>
-            <p class="fragment">Linked in a candidates CV</p>
+            <p class="fragment">Link in a candidates CV</p>
+            <p class="fragment">Link in a honeypot profile</p>
             <p class="fragment">Your CTO says "he looks really good on github!"</p>
             <p class="fragment">Friend-of-a-friend referrals</p>
             <p class="fragment">You google a developer</p>
@@ -122,7 +124,7 @@
         </section>
 
         <section>
-            <h3>Report a <a target="_blank" href="https://github.com/hakimel/reveal.js/issues/1489">feature</a></h3>
+            <h3>Request a <a target="_blank" href="https://github.com/hakimel/reveal.js/issues/1489">feature</a></h3>
             <img data-src="img/feature_request_via_issue_in_reveal_js.png">
         </section>
 
@@ -177,7 +179,12 @@
             <p class="fragment">github is not a recruiting platform</p>
             <p class="fragment">It doesn't offer any recruiting-related search functionality</p>
             <p class="fragment">But you can use it to evaluate developers!</p>
-            <p class="fragment">Google somebody's name</p>
+        </section>
+
+        <section>
+            <h3>A github workflow</h3>
+            <p class="fragment">There is no rule book for this</p>
+            <p class="fragment">Everybody, including me, has their own workflow</p>
         </section>
 
         <section>
@@ -205,30 +212,13 @@
         </section>
 
         <section>
-            <h3>Know his interests: Starred projects</h3>
-            <img data-src="img/tenderlove_starred_projects.png">
-        </section>
-
-        <section>
-            <h3>A github workflow</h3>
-            <p class="fragment">There is no rule book for this</p>
-            <p class="fragment">Everybody, including me, has their own workflow</p>
-        </section>
-
-        <section>
-            <h3>Check out his <a target="_blank" href="https://github.com/tenderlove">profile</a></h3>
-            <img data-src="img/tenderlove_profile.png">
-        </section>
-
-        <section>
-            <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public
-                activity</a></h3>
-            <img data-src="img/tenderlove_public_activity_circled.png">
-        </section>
-
-        <section>
             <h3>Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></h3>
             <img data-src="img/tenderlove_repositories_circled.png">
+        </section>
+
+        <section>
+            <h3>Beware of forks though</h3>
+            <img data-src="img/tenderlove_repositories_all_with_forks.png">
         </section>
 
         <section>
@@ -242,15 +232,6 @@
         <section>
             <h3>Thank you!</h3>
             <p>Questions?</p>
-        </section>
-
-        <section>
-            <h3>Optional</h3>
-        </section>
-
-        <section>
-            <h3>If he has popular repositories, how is the documentation?</h3>
-            <img data-src="img/tenderlove_racc_repository.png">
         </section>
     </div>
 
